add:header-features

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
     font-family: "Noto Sans", "sans-serif";
 }
 .container{
-    max-width: 1140px;
+    max-width: 1440px;
     margin: auto;
 }
 .navbar{
@@ -116,4 +116,25 @@ body{
     font-size: 16px;
     line-height: 160%;
     margin-bottom: 50px;
+}
+.header-features{
+    display: flex;
+    min-height: 168px;
+    padding: 0;
+    margin-top: 100px;
+    list-style: none;
+    color:#fff;
+    position: relative;
+}
+.header-features-item{
+    padding: 30px 50px;
+    border: 1px solid rgba(235, 235, 240, 0.2);
+}
+.header-features-item:not(:last-child){
+    border-right:none;
+}
+.header-features-text{
+    font-size: 16px;
+    line-height: 160%;
+    font-weight: 400;
 }
