add:section-steps

--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,74 @@ body{
     line-height: 160%;
     font-weight: 400;
 }
+.section{
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+.section-title{
+    font-family: "Bebas Neue Book";
+    color: #292d33;
+    font-size: 60px;
+    line-height: 120%;
+}
+.steps{
+    display: flex;
+    list-style: none;
+    padding: 0;
+    gap: 30px;
+}
+.steps-item{
+    max-width: 330px;
+}
+.steps-num{
+    color: rgb(92, 142, 230);
+    font-family: "Bebas Neue Book";
+    font-size: 48px;
+    line-height: 120%;
+    display: flex;
+    align-items:center;
+}
+.steps-num::after{
+    content:'';
+    height: 1px;
+    background: rgb(235, 235, 240);
+    width: 100%;
+    display: inline-block;
+    margin-left: 30px;
+
+}
+.steps-title{
+    color: rgb(41, 45, 51);
+    font-family: "Noto Sans", "sans-serif";
+    font-size: 28px;
+    line-height: 160%;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.steps-text{
+    color: rgb(130, 138, 153);
+    font-family: "Noto Sans", "sans-serif";
+    font-size: 16px;
+    line-height: 160%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.steps-link{
+    display: flex;
+    align-items:center;
+    text-decoration: none;
+    color: rgb(92, 142, 230);
+    font-family: "Noto Sans", "sans-serif";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 160%;
+}
+.steps-link::before{
+    content:'';
+    height: 1px;
+    background: rgb(92, 142, 230);
+    width: 40px;
+    display: inline-block;
+    margin-right: 20px;
+
+}
