--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,14 @@ body{
     align-items: center;
     color: #fff;
     height: 94px;
-    position: relative;
+    position: fixed;
     border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+    z-index: 2;
+    width: 100%;
 }
 .header{
     min-height: 100vh;
+    padding-top: 94px;
 }
 .header-image{
     background-image: url('../img/main_img.jpg');
