--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     }
 body{
     font-family: "Noto Sans", "sans-serif";
+    margin: 0;
 }
 .container{
     max-width: 1440px;
@@ -23,6 +24,14 @@ body{
     border-bottom: 1px solid rgba(235, 235, 240, 0.2);
     z-index: 2;
     width: 100%;
+    transition: background-color 0.2s;
+}
+.navbar-light{
+    background-color:#fff;
+    color: #292d33;
+}
+.navbar-light .header-logo-path{
+    fill: #292d33;
 }
 .header{
     min-height: 100vh;
