--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,12 @@ body{
     border-bottom: 1px solid rgba(235, 235, 240, 0.2);
     z-index: 2;
     width: 100%;
-    transition: background-color 0.2s;
+    transition: background-color 0.2s, height 0.2s;
 }
 .navbar-light{
     background-color:#fff;
     color: #292d33;
+    height: 74px;
 }
 .navbar-light .header-logo-path{
     fill: #292d33;
@@ -99,7 +100,9 @@ body{
     height: 100%;
 }
 .header-logo{
-    padding: 25px 50px;
+    display: flex;
+    align-items:center;
+    padding: 0px 50px;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
     height: 100%;
 }
