--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,9 @@ body{
 .navbar-light .header-logo-path{
     fill: #292d33;
 }
+.phone-icon{
+    fill:#5c8ee6;
+}
 .header{
     min-height: 100vh;
     padding-top: 5.875rem;
@@ -104,6 +107,9 @@ body{
     flex-shrink: 0;
     height: 100%;
     padding: 1.3125rem 2.6875rem;
+}
+.navbar-button .button-icon{
+    display: none;
 }
 .header-button{
     height: 100%;
@@ -248,17 +254,87 @@ body{
 }
 @media(max-width: 1420px){
     html{
-        font-size: 12px;
+        font-size: 13px;
     }
     .header-image{
         position: center;
+    }
+    .header-logo{
+        padding: 2rem;
+    }
+    .header-nav{
+        padding-left: 2rem;
+    }
+    .header-features-item:not(:last-child){
+        margin-right: 1rem;
+    }
+    .header-phone{
+        margin-right: 2rem;
+    }
+    .header-title{
+        max-width: 70rem;
     }
 }
-@media(max-width: 1220px){
-    html{
-        font-size: 10px;
+@media(max-width: 1200px){
+    .container{
+        max-width: 70rem;
     }
     .header-image{
         position: center;
+    }
+    .logo-svg{
+        max-width: 6rem;
+    }
+    .header-phone{
+        display: none;
+    }
+    .navbar{
+        height: 5rem;
+    }
+    .navbar-button{
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+@media(max-width: 992px){
+    html{
+        font-size: 12px;
+    }
+    .container{
+        max-width: 60rem;
+    }
+    .header-nav{
+        display: none;
+    }
+    .header-logo{
+        flex-grow: 1;
+        justify-content: center;
+    }
+    .mobile-menu-toggel{
+        width: 80px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 1.8rem;
+        border-right: 1px solid rgba(235, 235, 240, 0.2); 
+    }
+    .navbar-light .mobile-menu-line{
+        background-color:#333;
+    }
+    .mobile-menu-line{
+        height: 1px;
+        background-color:#fff;
+        width: 100%;
+    }
+    .mobile-menu-line:nth-child(2){
+        width: 80%;
+    }
+    .navbar-button .button-text{
+        display: none;
+    }
+    .navbar-button .button-icon{
+        display: block;
+        fill:#fff;
     }
 }
