--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     font-family: "Noto Sans", "sans-serif";
     margin: 0;
 }
+.mobile-menu{
+    display: none;
+}
 .container{
     max-width: 90rem;
     margin: auto;
@@ -208,7 +211,6 @@ body{
     width: 100%;
     display: inline-block;
     margin-left: 1.875rem;
-
 }
 .steps-title{
     color: rgb(41, 45, 51);
@@ -275,7 +277,7 @@ body{
         max-width: 70rem;
     }
 }
-@media(max-width: 1200px){
+@media(max-width: 1260px){
     .container{
         max-width: 70rem;
     }
@@ -296,6 +298,14 @@ body{
         padding-right: 2rem;
     }
 }
+@media(max-width:1040px){
+    html{
+        font-size: 12px;
+    }
+    .container{
+        max-width: 70rem;
+    }
+}
 @media(max-width: 992px){
     html{
         font-size: 12px;
@@ -310,7 +320,7 @@ body{
         flex-grow: 1;
         justify-content: center;
     }
-    .mobile-menu-toggel{
+    .mobile-menu-toggle{
         width: 80px;
         height: 100%;
         display: flex;
@@ -336,5 +346,83 @@ body{
     .navbar-button .button-icon{
         display: block;
         fill:#fff;
+    }
+    .mobile-menu{
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        z-index: 2;
+        background-color:#fff;
+        padding-top: 5rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+    .mobile-menu-nav{
+        list-style: none;
+        padding: 0;
+    }
+    .mobile-menu-link{
+        color: rgb(41, 45, 51);
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 160%;
+    }
+    .mobile-menu.is-open{
+        display:block;
+    }
+    .mobile-menu-nav-item{
+        margin-bottom: 2rem;
+    }
+    .mobile-submenu{
+        list-style-type: none;
+        padding: 0;
+        padding-left: 1rem;
+        margin-top: 1rem;
+    }
+    .mobile-submenu-link{
+        text-decoration: none;
+        color: rgb(130, 138, 153);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 160%;
+    }
+    .mobile-phone{
+        display: block;
+        color: rgb(41, 45, 51);
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 160%;
+        text-decoration-line: underline;
+        border-top: 1px solid rgb(235, 235, 240);
+        padding-top: 2rem;
+        margin-bottom: 1.5rem;
+    }
+    .mobile-info{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 1rem;
+    }
+    .mobile-info-address{
+        font-style: normal;
+        color: rgb(41, 45, 51);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 160%;
+        padding-left: .3125rem;
+    }
+    .mobile-info-email{
+        text-decoration: none;
+        color: rgb(41, 45, 51);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 160%;
+        padding-left: .3125rem;
     }
 }
