--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ body{
         height: 1px;
         background-color:#fff;
         width: 100%;
+        transition: transform 0.2s;
     }
     .mobile-menu-line:nth-child(2){
         width: 80%;
@@ -424,5 +425,14 @@ body{
         font-weight: 400;
         line-height: 160%;
         padding-left: .3125rem;
+    }
+    .close-menu .mobile-menu-line:nth-child(2){
+        display: none;
+    }
+    .close-menu .mobile-menu-line:nth-child(1){
+        transform: rotate(45deg) translateY(9px);
+    }
+    .close-menu .mobile-menu-line:nth-child(3){
+        transform: rotate(-45deg) translateY(-9px)
     }
 }
