--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,8 @@ body{
 .header-nav{
     display: flex;
     flex-basis: 100%;
+    height: 100%;
+    align-items:center;
     padding: 0;
     padding-left: 3.125rem;
     list-style: none;
@@ -85,13 +87,35 @@ body{
     gap:.625rem; 
     margin-right: 3.125rem;
 }
+.header-nav-item{
+    height: 100%;
+    display: flex;
+    align-items:center;
+}
 .header-nav-item:not(:last-child){
     margin-right: 4%;
 }
 .header-nav-link{
+    display: flex;
+    height: 100%;
+    align-items:center;
     text-decoration: none;
     font-size: 1rem;
     color:inherit;
+    position: relative;
+}
+.header-nav-link:after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom:-1px;
+    background-color:#5c8ee6;
+    transform:scaleX(0);
+    transition: transform 0.2s;
+}
+.header-nav-link:hover::after{
+    transform:scaleX(1);
 }
 .header-phone-link{
     text-decoration: none;
@@ -198,6 +222,9 @@ body{
     font-size: 3.75rem;
     line-height: 120%;
 }
+.section{
+    margin-bottom: 9.375rem;
+}
 .steps{
     display: flex;
     list-style: none;
@@ -257,6 +284,10 @@ body{
     width: 2.5rem;
     display: inline-block;
     margin-right: 1.25rem;
+    transition: width 0.2s;
+}
+.steps-link:hover::before{
+    width: 60px;
 }
 .slider-steps-buttons{
     display:flex;
@@ -272,6 +303,49 @@ body{
     justify-content: center;
     cursor: pointer; 
     background:rgb(92, 142, 230);
+}
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    flex-basis: 33%;
+    border: 1px solid rgb(235, 235, 240);
+    position: relative;
+    text-decoration: none;
+    transition: border 0.2s;
+}
+.card:hover .card-title{
+    color: #5c8ee6;
+}
+.card:hover{
+    border-color: #5c8ee6;
+}
+.card-content{
+    padding: 2.5rem 3.125rem;
+}
+.card-title{
+    font-size: 1.75rem;
+    font-weight: 400;
+    line-height: 140%;
+    color: rgb(41, 45, 51);
+    margin-top: 0;
+    margin-bottom: 10px;
+    transition: color 0.2s;
+}
+.card-text{
+    color: rgb(130, 138, 153);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: 24.625rem;
+}
+.card-image{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+    width: 90%;
 }
 @media(max-width: 1700px){
     html{
@@ -329,6 +403,9 @@ body{
     }
     .header-features-item{
         margin: 0;
+    }
+    .card{
+        flex-basis: 50%;
     }
 }
 
@@ -476,6 +553,9 @@ body{
     .header-content{
         padding-top: 2rem;
     }
+    .card{
+        flex-basis: 100%;
+    }
 }
 @media(max-width: 576px){
     .container{ 
@@ -491,7 +571,7 @@ body{
         padding-top: 2rem;
     }
     .section{
-        margin-bottom: 6.25rem;
+        margin-bottom: 9.375rem;
     }
     .swiper-wrapper{
         margin-bottom: 5rem;
