--- a/css/style.css
+++ b/css/style.css
@@ -356,12 +356,42 @@ body{
     border: 1px solid rgb(235, 235, 240);
     text-decoration: none;
     transition: border 0.2s;
-    padding: 3.125rem;
+    padding: 3rem;
     display: grid;
-
+    grid-column-gap: 3.125rem;
+    grid-template-columns: 180px 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas: "logo title title" "logo text text";
+}
+.trademark-card-logo{
+    width: 100%;
+    grid-area: logo;
+    fill:#828a99;
+}
+.trademark-card-title{
+    grid-area: title;
+    font-size: 1.75rem;
+    font-weight: 400;
+    line-height: 160%;
+    color: rgb(41, 45, 51);
+    margin: 0;
+}
+.trademark-card-text{
+    grid-area: text;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    color: rgb(130, 138, 153);
+    margin-top: .625rem;
 }
 .trademark-card:hover{
     border-color: #5c8ee6;
+}
+.trademark-card:hover .trademark-card-logo{
+    fill:#5c8ee6;
+}
+.trademark-card:hover .trademark-card-title{
+    color:#5c8ee6;
 }
 @media(max-width: 1700px){
     html{
@@ -422,6 +452,9 @@ body{
     }
     .card{
         flex-basis: 50%;
+    }
+    .trademark-card{
+        grid-template-columns: 3.125rem auto;
     }
 }
 
@@ -554,6 +587,9 @@ body{
     .close-menu .mobile-menu-line:nth-child(3){
         transform: rotate(-45deg) translateY(-9px)
     }
+    .trademark-cards{
+        flex-direction: column;
+    }
 }
 
 @media(max-width: 768px){
@@ -594,5 +630,9 @@ body{
     }
     .header{
         margin-bottom: 6.25rem;
+    }
+    .trademark-card{
+        grid-template-areas: "logo title" "text text";
+
     }
 }
