--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,7 @@ body{
     grid-template-columns: 180px 1fr;
     grid-template-rows: auto 1fr;
     grid-template-areas: "logo title title" "logo text text";
+    margin-bottom: 9.375rem;
 }
 .trademark-card-logo{
     width: 100%;
@@ -393,6 +394,72 @@ body{
 .trademark-card:hover .trademark-card-title{
     color:#5c8ee6;
 }
+.founder{
+    position: relative;
+    min-height: 41.25rem;
+}
+.founder-photo{
+    position: absolute;
+    left:0;
+    width: 40%;
+    top:0;
+    min-height: 100%;
+    object-fit: cover;
+}
+.founder-content{
+    max-width: 45rem;
+    margin-bottom: 9.375rem;
+}
+.founder-content-wrapper{
+    display:flex;
+    justify-content: flex-end;
+}
+.founder-text{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    color: rgb(130, 138, 153);
+}
+.clients-wrapper{
+    display: flex;
+    gap: 3.125rem;
+}
+.clients-content{
+    flex-basis: 50%;
+}
+.clients-list{
+    list-style-type: none;
+    padding: 0;
+    columns: 2 auto;
+}
+.clients-list-item{
+    display: flex;
+    align-items: center;
+    gap: 1.25rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    color: #292D33;
+}
+.clients-logo-list{
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 10;
+}
+.clients-logo-item{
+    flex-basis: 33%;
+    border: 1px solid #ebebf0;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    padding: 1rem;
+}
+.clients-logo{
+    max-width: 100%;
+    width: 70px;
+    height: 70px;
+}
+
 @media(max-width: 1700px){
     html{
         font-size: 14px;
@@ -455,6 +522,9 @@ body{
     }
     .trademark-card{
         grid-template-columns: 3.125rem auto;
+    }
+    .founder-content{
+        max-width: 35rem;
     }
 }
 
@@ -590,6 +660,9 @@ body{
     .trademark-cards{
         flex-direction: column;
     }
+    .clients-wrapper{
+        flex-direction: column;
+    }
 }
 
 @media(max-width: 768px){
@@ -607,6 +680,11 @@ body{
     }
     .card{
         flex-basis: 100%;
+    }
+    .founder-photo{
+        position: relative;
+        width: 100%;
+        margin-bottom: 3.125rem;
     }
 }
 @media(max-width: 576px){
@@ -633,6 +711,11 @@ body{
     }
     .trademark-card{
         grid-template-areas: "logo title" "text text";
-
+    }
+    .clients-list{
+        columns:1;
+    }
+    .clients-logo-item{
+        flex-basis: 50%;
     }
 }
