--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,109 @@ body{
 .button-link:hover::before{
     width: 60px;
 }
+.bg-grey{
+    background:#F0F2F5;
+    
+}
+.cta-image{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    max-width: 45rem;
+    width: 50%;
+}
+.section-cta{
+    padding-top: 6.25rem;
+    position: relative;
+    margin-top: 9.375rem;
+    padding-bottom: 6.25rem;
+}
+.cta-form-wrapper{
+    display: flex;
+    justify-content: flex-end;
+}
+.cta-form{
+    max-width: 52.5rem;
+}
+.cta-form-text{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    font-style: normal;
+    color:#828A99;
+    margin-top: 1.375rem;
+    margin-bottom: 2.5rem;
+    max-width: 40rem;
+}
+.input-group-wrapper{
+    display: flex;
+    gap:30px;
+}
+.input-group{
+    position: relative;
+    height: 4.125rem;
+    flex-grow: 1;
+}
+.input{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    padding: 1.25rem 1.875rem;
+    border:1px solid #E4E4EB;
+    background-color:#F0F2F5;
+}
+.input-group-label{
+    position: absolute;
+    cursor:text;
+    top:1.2rem;
+    left: 1.975rem;
+    color:#828A99;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+    transition: top 0.2s, left 0.2s, font-size 0.2s;
+}
+.input:focus{
+    border: 1px solid #5c8ee6;
+    outline: 0;
+}
+.input:focus ~ .input-group-label,
+.input:not(:placeholder-shown).input:not(:focus)~.input-group-label{
+    top: -0.5rem;
+    left: 1.25rem;
+    font-size: 0.625rem;
+    background-color:#F0F2F5;
+    padding: 0 10px;
+}
+.cta-form-footer{
+    display: flex;
+    margin-top: 1.25rem;
+    gap: 1.875rem;
+    align-items: center;
+}
+.cta-form-button{
+    flex-shrink: 0;
+}
+.notify{
+    display: flex;
+    align-items: flex-start;
+    gap: 0.625rem;
+}
+.notify-icon{
+    flex-shrink: 0;
+}
+.notify-text{
+    margin: 0;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 160%;
+    color: #828A99;
+    max-width: 24.125rem;
+}
+
+
 @media(max-width: 1700px){
     html{
         font-size: 14px;
