--- a/css/style.css
+++ b/css/style.css
@@ -548,8 +548,8 @@ body{
 .section-cta{
     padding-top: 6.25rem;
     position: relative;
-    margin-top: 9.375rem;
-    padding-bottom: 6.25rem;
+    margin-top: 6.25rem;
+    padding-bottom: 5rem;
 }
 .cta-form-wrapper{
     display: flex;
@@ -635,8 +635,104 @@ body{
     color: #828A99;
     max-width: 24.125rem;
 }
-
-
+.footer-top{
+    padding-top: 3.125rem;
+    padding-bottom: 3.125rem;
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+}
+.footer-info{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-style: normal;
+    color:#292D33;
+    gap: 10px;
+}
+.footer-info-address,
+.footer-info-email{
+    font-style: inherit;
+    text-decoration: inherit;
+    color:inherit;
+}
+.footer-logo{
+    width: 12.5rem;
+    height: 3.75rem;
+}
+.footer-phone{
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 160%;
+    color: #292D33;
+}
+.footer-social-link{
+    text-decoration: none;
+}
+.footer-seporator{
+    color:#EBEBF0;
+    opacity: 0.5;
+}
+.footer-bottom{
+    padding-top: 3.125rem;
+    padding-bottom: 3.125rem;
+    display: flex;
+}
+.footer-menu-title{
+    margin-top: 0;
+    margin-bottom: 1.875rem;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 160%;
+    color: #292D33;
+}
+.footer-menu-list{
+    margin: 0;
+    padding-left: 1.25rem;
+    list-style: none;
+}
+.footer-menu-column-2{
+    columns: 20rem auto;
+    min-width: 50rem;
+}
+.footer-menu-link{
+    text-decoration: none;
+    color: #828A99;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: .9375rem;
+    display: block;
+}
+.footer-menu-link-bold{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 160%;
+    color: #292D33;
+    margin-bottom: 1.875rem;
+}
+.footer-menu-wrapper:last-child{
+    margin-left: 10rem;
+}
+.footer-wrapper{
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+}
+.footer-wrapper,
+.footer-legal{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    gap: 4.375rem;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 160%;
+    color: #828A99;
+}
+.footer-polyci{
+    text-decoration: none;
+    color: #828A99;
+}
 @media(max-width: 1700px){
     html{
         font-size: 14px;
