--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,7 @@ body{
     position: relative;
     height: 4.125rem;
     flex-grow: 1;
+    background-color: #F0F2F5;
 }
 .input{
     width: 100%;
@@ -585,7 +586,7 @@ body{
     left:0;
     padding: 1.25rem 1.875rem;
     border:1px solid #E4E4EB;
-    background-color:#F0F2F5;
+    background-color: inherit;
 }
 .input-group-label{
     position: absolute;
@@ -603,11 +604,11 @@ body{
     outline: 0;
 }
 .input:focus ~ .input-group-label,
-.input:not(:placeholder-shown).input:not(:focus)~.input-group-label{
+.input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label{
     top: -0.5rem;
     left: 1.25rem;
     font-size: 0.625rem;
-    background-color:#F0F2F5;
+    background-color:inherit;
     padding: 0 10px;
 }
 .cta-form-footer{
@@ -733,6 +734,83 @@ body{
     text-decoration: none;
     color: #828A99;
 }
+.modal{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-100%);
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(40, 45, 51, 0.5);
+    z-index: 10;
+    display: flex;
+}
+.modal.is-open{
+    transform: translateX(0);
+    visibility: visible;
+    opacity: 1;
+}
+.modal.is-open .modal-dialog{
+    transform: translateY(0);
+    opacity: 1;
+}
+.modal-dialog{
+    background-color:#fff;
+    margin: auto;
+    max-width: 28.75rem;
+    padding: 2.5rem 3.125rem;
+    position: relative;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: transform 0.3s, opacity 0.3s;
+}
+.modal-title{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 3rem;
+    line-height: 120%;
+    color:#292D33;
+    font-family: "Bebas Neue Book";
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.modal-close{
+    display: block;
+    position: absolute;
+    top: 2.5rem;
+    right: 3.125rem;
+    width: 3.125rem;
+    height: 3.125rem;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    border: 1px solid #EBEBF0;
+}
+.modal-text{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    color: #828A99;
+    margin-bottom: 30px;
+}
+.input-group-vertical{
+    display: flex;
+    flex-direction: column;
+}
+.modal-input-group{
+    background-color:#fff;
+}
+.modal-form-footer{
+    margin-top: 1.875rem;
+}
+.modal-form-button{
+    display: block;
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+
 @media(max-width: 1700px){
     html{
         font-size: 14px;
