--- a/css/style.css
+++ b/css/style.css
@@ -790,8 +790,8 @@ ul.breadcrumb li+li:before {
     position: fixed;
     top:0;
     left:0;
-    width: 100%;
-    height: 100%;
+    width: 21.5625rem;
+    height: 34.625rem;
     background-color: rgba(40, 45, 51, 0.5);
     z-index: 10;
     display: flex;
@@ -857,7 +857,16 @@ ul.breadcrumb li+li:before {
 .modal-form-button{
     display: block;
     width: 100%;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem;  
+}
+.alert-modal-image{
+    position: absolute;
+    width: 285px;
+    height: 245.42px;
+    left: 45px;
+    top: 159px;
+    margin: 1.875rem;
+    
 }
 @media(max-width: 1700px){
     html{
